--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 Notice of Copyrights and Licenses:
 ---------------------------------------
+The pir8aye.net name and logo is not part of the open source license. 
+
 The WalletGenerator.net project, software and embedded resources are copyright WalletGenerator.net.
 The WalletGenerator.net name and logo are not part of the open source license.
 
@@ -51,7 +53,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
   GitHub Repository: https://github.com/MichaelMure/WalletGenerator.net
   -->
 
-  <title>WalletGenerator.net - Universal Paper wallet generator for Bitcoin and other cryptocurrencies</title>
+  <title>wallets.pir8aye.net - Universal Paper Wallet Generator for Bitcoin and Other Cryptocurrencies</title>
 
   <script type="text/javascript">
 // Array.prototype.map function is in the public domain.
